<resources>
    <string name="app_name">SindiswaSinazo</string>
    <string name="logout">Logout</string>
    <string name="gamification">Gamification</string>
    <string name="budget_feedback">Budget Feedback</string>
    <string name="view_graph">View Graph</string>
    <string name="category_totals">Category Totals</string>
    <string name="set_goals">Set Goals</string>
    <string name="add_category">Add Category</string>
    <string name="add_entry">Add Entry</string>
    <string name="view_entries">View Entries</string>
    <string name="your_badges">Your Badges</string>
    <string name="set_budget_goals">Set Budget Goals</string>
    <string name="minimum_amount">Minimum Amount</string>
    <string name="maximum_amount">Maximum Amount</string>
    <string name="save_goal">Save Goal</string>
    <string name="save_category">Save Category</string>
    <string name="add_new_category">Add New Category</string>
    <string name="category_name">Category Name</string>
    <string name="select_color">Select Color</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="view_detailed_report">View Detailed Report</string>
    <string name="total_spent_this_month">Total spent this month:</string>
    <string name="monthly_spending_overview">📊 Monthly Spending Overview</string>
    <string name="select_category">Select Category</string>
    <string name="overall_budget_status">Overall Budget Status</string>
    <string name="category_budget_status">Category Budget Status</string>
    <string name="placeholder_image">Placeholder image</string>
    <string name="loading_detailed_report">Loading detailed report...</string>
    <string name="login">🔐 Login</string>


</resources>